# Aether

./: .aider.conf.yml  .ansible-lint  .clangd  .clinerules  .coverage  .ctags  .cursorignore  .cursorrules  .disk-caching-env  .editorconfig  .exarp_wisdom_seen  .gitattributes  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .gomarklint.json  .markdownlint.json  .markdownlintignore  .mcp.json  .opencode.json  .pre-commit-config.yaml  .shellcheckrc  .venv  .windsurfrules  AGENTS.md  ARCHITECTURE.md  ATTRIBUTIONS.md  CHANGELOG.md  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CODEX.md  CONTRIBUTING.md  CROSS_PLATFORM_AUTOMATION_COMPLETE.md  CURSOR_CONFIGURATION_COMPLETE.md  CURSOR_DOCS_SETUP_INSTRUCTIONS.md  CURSOR_SETUP_STATUS.md  Cargo.toml  (+35 more)
agents/backend/: Cargo.toml  README.md  cursor-agent.json
agents/backend-market-data/: Cargo.toml  README.md  cursor-agent.json
agents/nautilus/: README.md  pyproject.toml
ibapi_cmake/: CMakeLists.txt
mcp/trading_server/: CYTHON_BINDINGS_GUIDE.md  README.md  __init__.py  bridge.py  pyproject.toml  server.py
native/: CMakeLists.txt
native/cmake/: nlopt-enable-cxx.patch
native/ibapi_cmake/: CMakeLists.txt
native/include/: agg_types_agg.h  aggregator_agg.h  amortization_schedule.h  asset_relationship.h  box_spread_bag.h  box_spread_strategy.h  cache_client.h  cache_client_memcached.h  circuit_breaker_agg.h  collateral_valuator.h  config_manager.h  connection_utils.h  constants.h  convexity_calculator.h  financing_instrument.h  financing_optimizer.h  greeks_calculator.h  hedge_manager.h  loan_manager.h  loan_position.h  mapping_policy_agg.h  margin_calculator.h  market_hours.h  mock_adapter_agg.h  mock_data_generator.h  nats_client.h  order_manager.h  path_validator.h  pcap_capture.h  proto_adapter.h  provider_adapter_agg.h  rate_limiter.h  risk_calculator.h  session_manager_agg.h  tui_breadcrumb.h  tui_config.h  tui_converter.h  tui_data.h  tui_provider.h  tws_client.h  (+12 more)
native/src/: amortization_schedule.cpp  asset_relationship.cpp  box_spread_bag.cpp  box_spread_pybind.cpp  box_spread_strategy.cpp  cache_client.cpp  cache_client_memcached.cpp  collateral_valuator.cpp  config_manager.cpp  connection_utils.cpp  convexity_calculator.cpp  financing_instrument_registry.cpp  financing_optimizer.cpp  greeks_calculator.cpp  hedge_manager.cpp  ib_box_spread.cpp  loan_manager.cpp  loan_position.cpp  margin_calculator.cpp  market_hours.cpp  ml_predictor.cpp  mock_data_generator.cpp  nats_client.cpp  option_chain.cpp  order_manager.cpp  path_validator.cpp  pcap_capture.cpp  proto_adapter.cpp  rate_limiter.cpp  risk_calculator.cpp  risk_calculator_sizing.cpp  risk_calculator_stats.cpp  risk_calculator_var.cpp  tui_app.cpp  tui_breadcrumb.cpp  tui_config.cpp  tui_converter.cpp  tui_data.cpp  tui_provider.cpp  tws_client.cpp  (+11 more)
native/tests/: CMakeLists.txt  eigen_integration_test.cpp  test_alpaca_adapter.cpp  test_amortization_schedule.cpp  test_asset_relationship.cpp  test_box_spread_bag.cpp  test_box_spread_e2e.cpp  test_box_spread_strategy.cpp  test_config_manager.cpp  test_convexity_calculator.cpp  test_diagnostic_connect.cpp  test_greeks_calculator.cpp  test_hedge_manager.cpp  test_loan_position.cpp  test_main.cpp  test_market_data_integration.cpp  test_market_hours.cpp  test_option_chain.cpp  test_order_manager.cpp  test_packet_trace.cpp  test_path_validator.cpp  test_positions_live.cpp  test_proto_adapter.cpp  test_rate_limiter.cpp  test_risk_calculator.cpp  test_simple_connect.cpp  test_tws_client.cpp  test_tws_connection.cpp  test_tws_integration.cpp  test_yield_curve_fitting.cpp  types_stub_for_proto_test.cpp
native/wasm/: CMakeLists.txt  README.md
python/: .gitignore  INSTALL.md  MANIFEST.in  ORATS_USAGE.md  PACKAGE.md  README.md  __init__.py  config_adapter.py  nautilus_strategy.py  proto_types.py  pyproject.toml  setup.py
python/bindings/: __init__.py  box_spread_bindings.pxd  box_spread_bindings.pyx  setup.py
python/dsl/: README.md  __init__.py  box_spread_dsl.py  cash_flow_dsl.py  examples.py  financing_strategy_dsl.py  types.py
python/integration/: __init__.py  alpaca_client.py  alpaca_service.py  alpha_vantage_client.py  box_spread_models.py  box_spread_strategy.py  broker_client_base.py  broker_positions.py  cache_client.py  cash_flow_calculator.py  cash_flow_portfolio_manager.py  cash_flow_timeline.py  combo_detector.py  config_loader.py  connection_manager.py  data_provider_router.py  discount_bank_helpers.py  discount_bank_models.py  discount_bank_parser.py  discount_bank_service.py  dte_utils.py  dxlink_client.py  example_risk_free_rate.py  excel_dde_client.py  excel_file_importer.py  excel_rtd_client.py  execution_handler.py  financing_comparator.py  frontend_views.py  ib_service.py  ib_snapshot_builder.py  ibkr_portal_client.py  israeli_broker_models.py  israeli_broker_scraper.py  jupyterlab_service.py  ledger_queries.py  linear_client.py  loan_manager.py  market_data_handler.py  market_hours.py  (+43 more)
python/lean/: __init__.py
python/lean_integration/: README_API_WRAPPER.md  __init__.py  algorithm_hooks.py  api_converter.py  api_models.py  api_wrapper.py  box_spread_algorithm.py  config_adapter.py  data_converter.py  event_bridge.py  lean_client.py  strategy_config.py  type_mappings.py  websocket_manager.py
python/ml/: README.md  __init__.py  continuous_learning.py  evaluate_models.py  feature_engineering.py  train_models.py
python/services/: analytics_api.py  calculations_api.py  environment_config.py  health_dashboard.py  security.py  security_integration_helper.py  swiftness_api.py
python/tests/: conftest.py  run_security_tests.py  test_alpaca_client.py  test_alpha_vantage_client.py  test_benchmarks_tab.py  test_box_spread_strategy.py  test_cash_flow_calculator.py  test_cash_flow_dsl.py  test_cash_flow_portfolio_manager.py  test_cash_flow_timeline.py  test_combo_detector.py  test_config_loader.py  test_connection_manager.py  test_discount_bank_transactions.py  test_dte_utils.py  (+41 more)
tests/: CMakeLists.txt  test_config_manager.cpp  test_main.cpp  test_risk_calculator.cpp
(+2475 files in other folders)
